processed/gerrit/txt/60431.txt
Change:     60431
Subject:    LU-18925 build: 64k client do not use pgidx before defined
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/60431
Change-Id:  I359b3a927b2360d327da6dd7d7a6b92c9f2281d5
Project:    fs/lustre-release
Branch:     master
Status:     MERGED
Owner:      Shaun Tancheff
Created:    2025-07-29 14:49:16.000000000
Updated:    2025-08-20 03:08:20.000000000
Patch Set:  2
Insertions: +2
Deletions:  -1
Comments:   3 (0 unresolved)

--- Labels ---
  Code-Review: James Simmons: +1; Alexey Lyashkov: +1; Oleg Drokin: +2; Timothy Day: +1
  Verified: jenkins: +1; Maloo: +1

--- Reviewers ---
  REVIEWER: Oleg Drokin, James Simmons, Alexey Lyashkov, Timothy Day

--- Commit Message ---
LU-18925 build: 64k client do not use pgidx before defined

Build fix for 64k

dt_object.c:1034:53: error: 'pgidx' undeclared \
   (first use in this function); did you mean 'pid'?
 1034 |                 void *kaddr = kmap_local_page(pages[pgidx]);
      |                                                     ^~~~~
      |                                                     pid

Test-Parameters: trivial
Fixes: ea0bdfc7cf0 ("LU-18925 libcfs: prefer kmap_local_page")
Signed-off-by: Shaun Tancheff <shaun.tancheff@hpe.com>
Change-Id: I359b3a927b2360d327da6dd7d7a6b92c9f2281d5
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/60431
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>
Reviewed-by: Timothy Day <timday@amazon.com>
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Alexey Lyashkov <alexey.lyashkov@hpe.com>
Tested-by: Maloo <maloo@whamcloud.com>

--- Review History ---

--- Message (Shaun Tancheff, 2025-07-29 14:49:16.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2025-07-29 14:50:19.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (jenkins, 2025-07-29 15:22:52.000000000) ---
Patch Set 1: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/115374/ : SUCCESS

--- Message (Timothy Day, 2025-07-29 15:50:13.000000000) ---
Patch Set 1: Code-Review+1

(1 comment)

--- Message (James Simmons, 2025-07-29 15:52:42.000000000) ---
Patch Set 1: Code-Review+1

--- Message (Alexey Lyashkov, 2025-07-30 08:27:35.000000000) ---
Patch Set 1: Code-Review+1

--- Message (Alexey Lyashkov, 2025-07-30 08:28:20.000000000) ---
Patch Set 1:

(1 comment)

--- Message (Oleg Drokin, 2025-08-20 03:08:17.000000000) ---
Patch Set 1: Code-Review+2

--- Message (Oleg Drokin, 2025-08-20 03:08:20.000000000) ---
Change has been successfully cherry-picked as 41e415a1f5a4a8865fafa2ff7db30b97926917d6
